index view jade Update

--- a/views/index.jade
+++ b/views/index.jade
@@ -79,7 +79,8 @@ html
             h1.text-info Online Library
             p
               | Hidayat Rohman, Heru Bagus Nugroho, Aditya Dhani Sabang Saputra, Syardi
-              | Baharuddin Husnia Jannah, Naufal Riza Fatahillah, I made Gofala Jaya.
+              | Baharuddin Husnia Jannah, Naufal Riza Fatahillah, I made Gofala Jaya, Bujang P.W, Muhammad Arifin, 
+			  | Dody Adi N.
           .col-sm-6
             p.text-info.text-right
               br
