--- a/views/index.jade
+++ b/views/index.jade
@@ -1,107 +1,5 @@
-html
-  head
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-    // Latest compiled and minified CSS
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
-    // Optional theme
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css', integrity='sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r', crossorigin='anonymous')
-    // Latest compiled and minified JavaScript
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
-    title Online Library
-    style(type='text/css').
-      body { font-family:tahoma; font-size:13px; }
-      #container { width:800px; padding:20px 40px; margin:50px auto; border:0px solid #555; box-shadow:0px 0px 2px #555; }
-      input[type="text"] { width:200px; }
-      input[type="text"], textarea { padding:5px; margin:2px 0px; border: 1px solid #777; }
-      input[type="email"] {width: 200px;}
-      input[type="email"], textarea { padding:5px; margin:2px 0px; border: 1px solid #777; }
-      input[type="submit"], input[type="reset"] { padding: 5px 20px; margin:2px 0px; font-weight:bold; cursor:pointer; }
-      #error { border:1px solid red; background:#ffc0c0; padding:5px; }
-  body
-    .cover
-      .navbar.navbar-default
-        .container
-          .navbar-header
-            button.navbar-toggle(type='button', data-toggle='collapse', data-target='#navbar-ex-collapse')
-              span.sr-only Toggle navigation
-              span.icon-bar
-              span.icon-bar
-              span.icon-bar
-            a.navbar-brand(href='#')
-              span Daftar Buku
-          #navbar-ex-collapse.collapse.navbar-collapse
-            ul.nav.navbar-nav.navbar-right
-              li.active
-                a(href='#') Home
-              li
-                a(href='about.html') About
-      .cover-image
-      .container
-        .row
-          .col-md-12.text-center
-            h1 Online Library Cloud Service
-            p Next Generation Online Library
-            br
-            br
-    #container
-      h1 Buku Tamu Online Library
-      p Silahkan isi buku tamu di bawah ini untuk meninggalkan pesan Anda!
-      form
-        .form-group
-          label Nama
-          input.form-control(type='text', placeholder='Nama')
-        .form-group
-          label(for='exampleInputEmail1') Email
-          input#exampleInputEmail1.form-control(type='email', placeholder='Email')
-        .form-group
-          label Alamat
-          input.form-control(type='text', placeholder='Alamat')
-        .form-group
-          label Telepon
-          input.form-control(type='text', placeholder='Telepon')
-        .checkbox
-        button.btn.btn-success(type='submit') Submit
-        button.btn.btn-danger(type='reset') Hapus
-      br
-      table.table.table-striped
-        tbody
-          tr
-            td No.
-            td Nama
-            td Alamat
-            td Email
-            td Telepon
-            td Aksi
-    footer.section.section-primary
-      .container
-        .row
-          .col-sm-6
-            h1.text-info Online Library
-            p
-              | Hidayat Rohman, Heru Bagus Nugroho, Aditya Dhani Sabang Saputra, Syardi
-              | Baharuddin Husnia Jannah, Naufal Riza Fatahillah, I made Gofala Jaya, Bujang P.W, Muhammad Arifin, 
-			  | Dody Adi N.
-          .col-sm-6
-            p.text-info.text-right
-              br
-              br
-            .row
-              .col-md-12.hidden-lg.hidden-md.hidden-sm.text-left
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-instagram.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-twitter.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-facebook.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-github.text-inverse
-            .row
-              .col-md-12.hidden-xs.text-right
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-instagram.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-twitter.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-facebook.text-inverse
-                a(href='#')
-                  i.fa.fa-3x.fa-fw.fa-github.text-inverse
+a(href='/') HOME
+br
+a(href='/users/new') CREATE
+br
+a(href='/users/') SHOW DATA
